--- a/example.ipynb
+++ b/example.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_processing.pubchem_features import clean_pubchem\n",
+    "from preprocessing.pubchem_features import clean_pubchem\n",
     "data = \"pubchem.csv\" #place here the path to your downloaded csv from pubchem for a set of molecules\n",
-    "clean_data = clean_pubchem(data)"
+    "lean_data = clean_pubchem(data)"
    ]
   },
   {
